# printer_RFID

./: BUILD_README.md  alfa.py  bires.py  build.bat  etiqueta.prn  etiquetas_rfid.csv  forced_epc.py  main.py  pyproject.toml  rfid-printer.spec  rfid.py  rfid_dev.py  run.py  tag.py  test-cors.html  test.py  test2.py  test3.py  test4.py  user.py  zpl.py
